# fastgpt-dataset-mcp

./: .env  ARCHITECTURE.md  CHANGELOG.md  INSTALLATION_GUIDE.md  MCP_TOOLS_GUIDE.md  README.md  TOOLS_GUIDE.md  agent_prompt.md  config.env.example  main.py  pyproject.toml  权限配置说明.md
config/: logging.env  permissions.json
examples/: smart_analysis_demo.py
src/: __init__.py  api_client.py  config.py  logger.py  models.py  session.py
src/services/: __init__.py  collection_service.py  document_analysis_service.py  format_utils.py  keyword_service.py  permission_service.py  search_service.py  tree_service.py
src/utils/: permission_decorators.py
